test/tests/stages/9_functions/valid/stack_arguments/stack_alignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[114]:
  int
  identifier(even_arguments)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  ,
  int
  identifier(d)
  ,
  int
  identifier(e)
  ,
  int
  identifier(f)
  ,
  int
  identifier(g)
  ,
  int
  identifier(h)
  )
  ;
  int
  identifier(odd_arguments)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  ,
  int
  identifier(d)
  ,
  int
  identifier(e)
  ,
  int
  identifier(f)
  ,
  int
  identifier(g)
  ,
  int
  identifier(h)
  ,
  int
  identifier(i)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(3)
  ;
  identifier(even_arguments)
  (
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  const int(4)
  ,
  const int(5)
  ,
  const int(6)
  ,
  const int(7)
  ,
  const int(8)
  )
  ;
  identifier(odd_arguments)
  (
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  const int(4)
  ,
  const int(5)
  ,
  const int(6)
  ,
  const int(7)
  ,
  const int(8)
  ,
  const int(9)
  )
  ;
  return
  identifier(x)
  ;
  }
