test/tests/stages/9_functions/invalid_types/conflicting_local_function_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[55]:
  int
  identifier(bar)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  ;
  return
  identifier(bar)
  (
  )
  +
  identifier(foo)
  (
  const int(1)
  )
  ;
  }
  int
  identifier(bar)
  (
  void
  )
  {
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  )
  ;
  return
  identifier(foo)
  (
  const int(1)
  ,
  const int(2)
  )
  ;
  }
